crates/validation/tests/snapshots/scenario_tests__builtin_legacy_modules_are_migrated.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: "(&outcome.errors, &migrated.model_fixes,\n&migrated.model.as_ref().unwrap().derive.as_ref().unwrap().using,)"
---
(
    [
        Error {
            scope: test://example/int-halve#/collections/testing~1int-halve/derive/using/python/dependencies,
            error: `dependencies` is no longer supported: declare dependencies in a `pyproject.toml` listed in the derivation's `files`,
        },
    ],
    [
        "migrated `module` into `files` as int-reverse/__init__.py, with a default pyproject.toml",
    ],
    Python(
        DeriveUsingPython {
            module: None,
            files: Inline(
                {
                    "int-reverse/__init__.py": Some(
                        "class Derivation: pass\n",
                    ),
                    "pyproject.toml": Some(
                        "[project]\nname = \"testing-int-reverse\"\nversion = \"0.1.0\"\nrequires-python = \">=3.14,<4\"\ndependencies = [\n    \"httpx>=0.27\",\n    \"pydantic>=2\",\n]\n\n[dependency-groups]\ndev = [\"pyright>=1.1\"]\n\n[tool.uv]\npackage = false\nexclude-newer = \"7 days\"\n\n[tool.pyright]\ntypeCheckingMode = \"strict\"\nextraPaths = [\"flow_generated/python\"]\n",
                    ),
                },
            ),
            config: RawValue(
                {},
            ),
            spec: BuiltinSpec {
                config_schema: None,
                resource_config_schema: None,
                oauth2: None,
            },
            dependencies: {},
        },
    ),
)
