crates/validation/tests/snapshots/scenario_tests__capture_endpoint_not_found.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-string-capture#/captures/0,
        error: endpoint CaptureEndpoit, referenced by capture, is not defined; did you mean captureEndpoint defined at test://example/catalog.yaml#/endpoints/captureEndpoint?,
    },
    Error {
        scope: test://example/int-string-capture#/captures/1,
        error: endpoint wildlyOffName, referenced by capture, is not defined,
    },
]
