crates/validation/tests/snapshots/scenario_tests__capture_endpoint_wrong_type.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-string-capture#/captures/testing~1int-string~1pull,
        error: Postgresql is not a supported endpoint type for a capture,
    },
]
