crates/validation/tests/snapshots/scenario_tests__capture_missing_resource_path.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-string-captures#/captures/testing~1s3-source/bindings/0,
        error: connector returned an invalid empty resource path for this capture binding,
    },
]
