crates/validation/tests/snapshots/scenario_tests__capture_target_is_missing_imports.snap
---
source: crates/validation/tests/scenario_tests.rs
assertion_line: 1301
expression: errors

---
[
    Error {
        scope: test://example/int-string-captures#/captures/testing~1db-cdc/bindings/0,
        error: capture references collection testing/int-reverse, defined at test://example/int-reverse#/collections/testing~1int-reverse, without importing it or being imported by it,
    },
    Error {
        scope: test://example/int-string-captures#/captures/testing~1s3-source/bindings/0,
        error: capture references collection testing/int-string, defined at test://example/int-string#/collections/testing~1int-string, without importing it or being imported by it,
    },
    Error {
        scope: test://example/int-string-captures#/captures/testing~1s3-source/bindings/1,
        error: capture references collection testing/int-string.v2, defined at test://example/int-string#/collections/testing~1int-string.v2, without importing it or being imported by it,
    },
]
