crates/validation/tests/snapshots/scenario_tests__capture_target_not_found.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-string-capture#/captures/0,
        error: collection testiNg/int-strinK, referenced by capture, is not defined; did you mean testing/int-string defined at test://example/int-string#/collections/testing~1int-string?,
    },
    Error {
        scope: test://example/int-string-capture#/captures/1,
        error: collection wildly/off/name, referenced by capture, is not defined,
    },
]
